[package]
name = "e2e-encryption-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
axum = { version = "0.7.5" }
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
clique-sibyl-commonlib = { git = "https://github.com/CliqueOfficial/clique-sibyl-commonlib.git", features = [
    "rustls-0_23",
] }
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.12.5", features = ["json", "rustls-tls"] }
